# DesignBuilder_DXF_to_IDF_Pipeline

./: .gitignore  ANALYSIS_COMPLETE.md  PROMPT.md  pyproject.toml  requirements.txt
1_input/Envelope_apartment_A/: construction_input_data.csv  glazing_input.csv  materials_input.csv
2_config/: case_defaults.json  cases.json  default_project.json  dxf_layer_profile_s04.json  library_paths.json  workspace_rules.json
2_config/projects/_template_dxf_case/: geometry_policy.template.json  naming_rules.template.json  pipeline_case.template.json
2_config/projects/apartment_a_new/: geometry_policy.json  naming_rules.json  pipeline_case.json
2_config/projects/noxh_apartment_b_clean/: geometry_policy.json  naming_rules.json  pipeline_case.json
2_config/projects/noxh_apartment_c_clean/: geometry_policy.json  naming_rules.json  pipeline_case.json
2_config/projects/noxh_apartment_d_clean/: geometry_policy.json  naming_rules.json  pipeline_case.json
2_config/projects/noxh_apartment_e_clean/: geometry_policy.json  naming_rules.json  pipeline_case.json
3_scripts/: setup_env.ps1  setup_env.sh
3_scripts/context/: __init__.py  mapping_builder.py
3_scripts/parsers/: __init__.py  dxf_raw_parser.py
3_scripts/pipeline/: __init__.py  apartment_a_pipeline.py  run_case_pipeline.py
3_scripts/qa/: run_regression_qa.py
3_scripts/schema_tools/: __init__.py  schema_workbench.py
3_scripts/tools/: apply_designbuilder_surface_adjacency_ui.py  designbuilder_surface_adjacency_ui_loader.py  migrate_project_layout.py  scaffold_dxf_case.py
3_scripts/transformers/: __init__.py  fenestration_builder.py  geometry_inference.py  surface_builder.py  wall_logic.py
3_scripts/utils/: __init__.py  common.py  envelope_library.py  library_paths.py  path_resolver.py
3_scripts/workspace_rules/: __init__.py  create_python_script.py  sync_workspace_rules.py  validate_script_compliance.py  workspace_guard.py
3_scripts/writers/: __init__.py  bundle_writer.py  rebuild_idf_from_bundle.py
4_schemas/contracts/: construction_library_schema.json  material_library_schema.json  metadata_schema.json  opening_library_schema.json
4_schemas/output/csv_bundle/: Building.schema.csv  BuildingSurface_Detailed.schema.csv  Construction.schema.csv  FenestrationSurface_Detailed.schema.csv  GlobalGeometryRules.schema.csv  Material.schema.csv  Site_Location.schema.csv  Version.schema.csv  WindowMaterial_Gas.schema.csv  WindowMaterial_Glazing.schema.csv  WindowProperty_FrameAndDivider.schema.csv  Zone.schema.csv
4_schemas/output/idf_reference/: Test1_for_DB_import_DBlean_crosscheck_schema.json
4_schemas/registry/: schema_manifest.json
4_schemas/source/dxf/: Apartment_A_filtered_extract_schema.json
5_output/apartment_a_new/idf/: Apartment_A_New_generated_from_bundle.idf  Apartment_A_New_generated_from_bundle.xml
5_output/apartment_a_new/reports/: designbuilder_internal_partition_default_probe_apartment_a_new_20260512_161411.csv  designbuilder_internal_partition_default_probe_apartment_a_new_20260512_161411.json  designbuilder_internal_partition_default_probe_apartment_a_new_20260512_162340.csv  designbuilder_internal_partition_default_probe_apartment_a_new_20260512_162340.json  designbuilder_surface_adjacency_ui_apply_apartment_a_new_20260512_170521.csv  designbuilder_surface_adjacency_ui_apply_apartment_a_new_20260512_170521.json  designbuilder_surface_adjacency_ui_apply_apartment_a_new_20260512_171131.csv  (+51 more)
6_docs/: README.md  WORKSPACE_RULES.md  architecture.md  dxf_case_setup.md  library_standard.md  naming.md  schema_standard.md  so_do_logic_workspace.md  so_do_logic_workspace.mmd  workspace_report_20260423_121157.md
(+35 files in other folders)
