[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "designbuilder-dxf-to-idf-pipeline"
version = "0.1.0"
description = "A complete workspace for processing DXF/TXT/IDF files for DesignBuilder import"
readme = "6_docs/README.md"
requires-python = ">=3.10"

authors = [
    {name = "Your Team", email = "email@example.com"}
]

license = {text = "MIT"}

keywords = ["designbuilder", "idf", "dxf", "etl", "data-processing"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0,<3.0",
    "openpyxl>=3.11.0",
    "pyyaml>=6.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0",
    "ezdxf>=1.1.0",
    "eppy>=0.5.60",
    "rich>=13.0",
    "typer>=0.9.0",
    "click>=8.1,<9.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1,<0.2",
    "isort>=5.12",
    "pre-commit>=3.0",
    "mypy>=1.0",
    "types-pyyaml",
]

docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.2",
]

[project.urls]
"Homepage" = "https://github.com/your-org/designbuilder-dxf-to-idf-pipeline"
"Documentation" = "https://designbuilder-dxf-to-idf-pipeline.readthedocs.io"
"Repository" = "https://github.com/your-org/designbuilder-dxf-to-idf-pipeline.git"
"Issue Tracker" = "https://github.com/your-org/designbuilder-dxf-to-idf-pipeline/issues"

[tool.setuptools]
packages = ["parsers", "transformers", "validators", "utils"]

[tool.setuptools.package-data]
designbuilder_dxf_to_idf_pipeline = ["2_config/**/*.yaml", "2_config/**/*.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "N", "S", "BLE", "B", "A", "COM", "C4", "PT", "SIM", "ARG", "PERF", "PIE"]
ignore = ["E501", "F405", "F403", "E402"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.isort]
known-first-party = ["parsers", "transformers", "validators", "utils"]

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["venv/"]

[tool.coverage.run]
source = ["parsers", "transformers", "validators", "utils"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if TESTING:",
    "@abstractmethod",
]
precision = 2
